# dosbox-rewrite

./: .gitignore  20200306-1327-Twitter.txt  Makefile.am  acinclude.m4  build-debug-g3-sdl2  build-debug-sdl2  build-macosx-sdl2  build-mingw-sdl2  build.sh  configure.ac  cpudec86.cpp  cpudec86_80186.cpp  cpudec86_80386.cpp  cpudec86_80386early.cpp  cpudec86_80486_generic.cpp  cpudec86_amdathlon.cpp  cpudec86_amdathlon_generic.cpp  cpudec86_amdk6r2.cpp  cpudec86_amdk6r2_generic.cpp  cpudec86_cyrix6x86mx.cpp  cpudec86_cyrix6x86mx_generic.cpp  cpudec86_necv20.cpp  cpudec86_pentium.cpp  cpudec86_pentium2.cpp  cpudec86_pentium2_generic.cpp  cpudec86_pentium3_generic.cpp  cpudec86_pentium4.cpp  cpudec86_pentium4prescott.cpp  cpudec86_pentium_generic.cpp  cpudec86_pentiummmx_generic.cpp  cpudetect.cpp  cpumemreftypes.cpp  cpumodregrm.cpp  empty.cpp  git-update-all-wo-push  intel8088.opcodes  opcc.cpp  test1.asm  test2.asm  test3.asm  (+13 more)
Documentation/: Code-formatting.md  Console-stdio-mode.md  Keyboard-System.md  Sound-System.md  VGA-Raster-System.md
OLD/take1/: Makefile.am  build.sh
REWRITE-TASKS/: Video-standard-crtc-model.md
include/: Makefile.am  Makefile.in  bios.h  builtin.h  dma.h  dos_inc.h  dosbox.h  inout.h  pc98_cg.h  pc98_dac.h  pc98_gdc.h  render.h  sdlmain.h  shell.h  vga.h
opcodes/: amd3dnow.common.opcodes  amd3dnowplus.common.opcodes  amd3dnowplusMMXSSE.common.opcodes  amdAthlon.opcodes  amdk6r2.opcodes  cyrix6x86MMX.common.opcodes  cyrix6x86MX.opcodes  everything.opcodes  intel80186.common.opcodes  intel80286.common.opcodes  intel80286.opcodes  intel80287.common.opcodes  intel80386.common.opcodes  intel80386.opcodes  intel80386early.opcodes  intel80387.common.opcodes  intel80486.common.opcodes  intel80486.opcodes  intel80487.common.opcodes  intel8086.common.opcodes  intel8086.opcodes  intel8087.common.opcodes  intel8088.opcodes  intelCore.common.opcodes  intelPentium.common.opcodes  intelPentium.opcodes  intelPentium2.common.opcodes  intelPentium2.opcodes  intelPentium3.common.opcodes  intelPentium3.opcodes  intelPentium4.common.opcodes  intelPentium4Prescott.opcodes  intelPentiumMMX.common.opcodes  intelPentiumMMX.opcodes  intelPentiumPro.common.opcodes  intelPentiumPro.opcodes  intelPentiumProMMX.opcodes  necv20.common.opcodes  necv20.opcodes
src/: Makefile.am  Makefile.in  dosbox.cpp
src/aviwriter/: Makefile.in
src/builtin/: Makefile.am  Makefile.in
src/cpu/: Makefile.am  Makefile.in  callback.cpp  cpu.cpp  paging.cpp
src/debug/: Makefile.in  debug.cpp  debug_gui.cpp
src/dos/: Makefile.am  Makefile.in  dev_con.h  dos.cpp  dos_classes.cpp  dos_devices.cpp  dos_execute.cpp  dos_files.cpp  dos_keyboard_layout.cpp  dos_memory.cpp  dos_misc.cpp  dos_mscdex.cpp  dos_programs.cpp  dos_tables.cpp  drive_cache.cpp  drive_fat.cpp  drive_iso.cpp  drive_local.cpp  drives.h
src/fpu/: Makefile.in
src/gui/: Makefile.am  Makefile.in  menu.cpp  menu_osx.mm  render.cpp  render_scalers.cpp  render_scalers.h  render_templates.h  sdl_gui.cpp  sdl_mapper.cpp  sdlmain.cpp
src/hardware/: Makefile.am  Makefile.in  dma.cpp  hardware.cpp  ide.cpp  iohandler.cpp  keyboard.cpp  memory.cpp  mixer.cpp  pc98.cpp  pci_bus.cpp  pic.cpp  sblaster.cpp  timer.cpp  vga.cpp  vga_attr.cpp  vga_crtc.cpp  vga_dac.cpp  vga_draw.cpp  vga_gfx.cpp  vga_memory.cpp  vga_misc.cpp  vga_other.cpp  vga_pc98_cg.cpp  vga_pc98_crtc.cpp  vga_pc98_dac.cpp  vga_pc98_egc.cpp  vga_pc98_gdc.cpp  vga_s3.cpp  vga_seq.cpp  vga_xga.cpp
src/hardware/mame/: Makefile.in
src/hardware/parport/: Makefile.in  parport.cpp
src/hardware/reSID/: Makefile.in
src/hardware/serialport/: Makefile.in
src/ints/: Makefile.am  Makefile.in  bios.cpp  bios_disk.cpp  bios_keyboard.cpp  ems.cpp  int10.cpp  int10.h  int10_char.cpp  int10_memory.cpp  int10_misc.cpp  int10_modes.cpp  int10_pal.cpp  int10_put_pixel.cpp  int10_vesa.cpp  int10_vptable.cpp  mouse.cpp  xms.cpp
src/libs/: Makefile.am  Makefile.in
src/misc/: Makefile.in  programs.cpp
src/mt32/: Makefile.in
src/output/: Makefile.am  Makefile.in  output_direct3d.cpp  output_opengl.cpp  output_surface.cpp  output_surface_sdl.cpp  output_surface_sdl2.cpp
src/platform/: Makefile.in
src/shell/: Makefile.in  shell.cpp  shell_cmds.cpp  shell_misc.cpp
src/xBRZ/: Makefile.in
test/: cocoa1.cpp  cocoa2.cpp  fb1.cpp  fb2.cpp  windx1_1.cpp  windx2_1.cpp  windx4_1.cpp  wingdi1.cpp  wingdi2.cpp  xcb1.cpp  xcb2.cpp  xlib1.cpp  xlib2.cpp  xlibopengl.cpp  xlibopengl2.cpp  xlibxcbopengl.cpp
testasm/: test5pro.asm  testevry.asm  testp2.asm  testp3.asm  testp4.asm  testp4p.asm  testssse3.asm
tools/cpudec/: cpudec86.cpp  cpudec86_80186.cpp  cpudec86_80286.cpp  cpudec86_80386.cpp  cpudec86_80386_generic.cpp  cpudec86_80386early.cpp  cpudec86_80386early_generic.cpp  cpudec86_80486.cpp  cpudec86_80486_generic.cpp  cpudec86_80486early.cpp  cpudec86_80486early_generic.cpp  cpudec86_8086.cpp  cpudec86_amdathlon.cpp  cpudec86_amdk6r2.cpp  cpudec86_amdk6r2_generic.cpp  cpudec86_cyrix6x86mx.cpp  cpudec86_cyrix6x86mx_generic.cpp  cpudec86_everything.cpp  cpudec86_everything_generic.cpp  cpudec86_intelcore.cpp  cpudec86_intelcore_generic.cpp  cpudec86_necv20.cpp  cpudec86_pentium.cpp  cpudec86_pentium2.cpp  cpudec86_pentium2_generic.cpp  cpudec86_pentium3.cpp  cpudec86_pentium3_generic.cpp  cpudec86_pentium4.cpp  cpudec86_pentium4_generic.cpp  cpudec86_pentium4prescott.cpp  cpudec86_pentium4prescott_generic.cpp  cpudec86_pentium_generic.cpp  cpudec86_pentiummmx.cpp  cpudec86_pentiummmx_generic.cpp  cpudec86_pentiumpro.cpp  cpudec86_pentiumpro_generic.cpp  cpudec86_pentiumprommx.cpp  cpudec86_pentiumprommx_generic.cpp  cpudec86common.h
tools/cpustep/: cpudec86_everything.cpp  cpustep86.cpp  cpustep86_everything.cpp  cpustep86common.h
tools/opcc/: opcc.cpp  opcc_symbols_combine.pl
try-1/: Makefile.am  TODO  git-update-all  git-update-all-wo-push
try-1/Documentation/: Display-System.md
try-1/opcodes/: amdk6r2.opcodes  intel80286.common.opcodes  intel80386.common.opcodes  intelPentium4.opcodes  (+1 more)
vs2015/: config.h  dosbox-x.sln  dosbox-x.vcxproj  dosbox-x.vcxproj.filters
(+182 files in other folders)
